CICD/cicd/ingress_nginx_deploy/test_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: nginx
          name: svc-demo
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: svc-demo
spec:
  selector:
    app: myapp
  ports:
    - targetPort: 80  # 后端Pod的端口
      port: 8080 # 服务要暴露的端口
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default  # 确保与服务的命名空间一致
spec:
  ingressClassName: nginx  # 指定使用的 Ingress 控制器类名
  rules:
    - host: foo.bar.com  # 设置域名
      http:
        paths:
          - pathType: Prefix  # 匹配路径的方式
            path: "/"  # 根路径
            backend:
              service:
                name: svc-demo  # 指定要转发到的服务
                port:
                  number: 8080   # 服务的端口
